k8s/aat/common/admin/k8s-env-injector-mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: env-injector-webhook-cfg
  namespace: admin
  labels:
    app: env-injector
webhooks:
  - name: env-injector.hmcts.net
    clientConfig:
      service:
        name: env-injector-webhook-svc
        namespace: admin
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV4ekNDQXErZ0F3SUJBZ0lRWkd4SFhsRG9weE1lSXhxZ2tDbDdwakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB4T1RFeE1ERXdPREkwTXpOYUZ3MDBPVEV3TWpRd09ETTBNek5hTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUF3c1Z2CjNXRjhIS0QrSW9RaS9ETzBjQUcyUFJYVnI2R2RaRVc1MTM3UEwvamo3aW0xOEVzSmpGVXZBVDkzTnBrY202Y3gKMC9wV0haTHRMYUFjTmlkc0VuN24vaTYweGdpV1ordFFLWXBRbkU5WFNMcHh4RjBJbTB6RWxOVnFpS0U5b29GTwpOVmlJN3VWOHNm [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        hmcts.github.com/envInjector: enabled
